--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,9 @@
     max-height: 100%;
   }
   .detail .gallery-image figcaption {
-    display: none;
+  display: none;
+   /*font-size: 5em;
+   max-width:600px;*/
   }
   
   [data-state=detail] .detail {
@@ -110,6 +112,22 @@
   [data-state=gallery] .detail .gallery-image {
     opacity: 0;
     transition: none;
+  }
+
+  a {
+    display:none;
+  }
+
+  [data-state=detail] a {
+    display:block;
+  }
+
+  button {
+    font-size: 24px;
+    background-color: #d0cff7;
+    color: black;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   
   /* ---------------------------------- */
@@ -146,6 +164,10 @@
     .gallery .gallery-image {
       width: 21%;
     }
+    .detail .gallery-image figcaption {
+      /* display: none;*/
+      font-size: 3em;
+     }
   }
 
   @media screen and (max-width: 1040px) {
@@ -158,6 +180,11 @@
     #app:hover .gallery .gallery-image {
       opacity: 0.7;
     }
+    .detail .gallery-image {
+      display: grid;
+    
+    }
+    
   }
 
   @media screen and (max-width: 697px) {
@@ -168,4 +195,11 @@
       margin-right: 1em;
       margin-left: 0em;
     }
-  }
+
+    .detail .gallery-image figcaption {
+      /* display: none;*/
+      font-size: 2em;
+     }
+
+ 
+} 
