--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,14 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    background:black;
-    /*background: #aaa4a4;*/
+    background:rgb(160, 160, 160);
+  }
+  .header {
+    padding: 60px;
+    text-align: center;
+    background: #5e5e5e;;
+    color: white;
+    font-size: 30px;
   }
   
   img {
