--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@
   }
   
  .detail {
-  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -81,26 +80,17 @@
   bottom: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(25, 25, 25, 0);
-  box-shadow: 0 0 30px #000;
+  background: rgba(25, 25, 25, 0.85);
   display: flex;
-  flex-direction: column; /* Stack children vertically */
-  align-items: center; /* Center children horizontally */
-  justify-content: center; /* Center children vertically */
-  pointer-events: none;
-  transition: background 0.3s linear;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
 }
 
 .detail .gallery-image {
-  padding: 5vmin;
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 90vh;
-  display: flex;
-  flex-direction: column; /* Stack children vertically */
-  align-items: center; /* Center children horizontally */
-  justify-content: center; /* Center children vertically */
+  position: relative; /* Establish a positioning context for the close button */
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .detail .gallery-image img {
@@ -109,6 +99,30 @@
   max-width: 100%;
   max-height: 80vh; /* Adjust as needed */
 }
+
+
+.detail-close {
+  position: absolute;
+  top: -40px; /* Position above the image */
+  right: -10px; /* Position to the right of the image */
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.5);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 3; /* Ensure it is above other elements */
+}
+
+.detail-close:hover {
+  color: #ccc;
+}
+
 
 #moreInfoBtn {
   margin-top: 20px; /* Space between the image and the button */
