--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@
   }
   
  .detail {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -80,17 +81,26 @@
   bottom: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(25, 25, 25, 0.85);
+  background: rgba(25, 25, 25, 0);
+  box-shadow: 0 0 30px #000;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 2;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  justify-content: center; /* Center children vertically */
+  pointer-events: none;
+  transition: background 0.3s linear;
 }
 
 .detail .gallery-image {
-  position: relative; /* Establish a positioning context for the close button */
-  max-width: 90%;
-  max-height: 90%;
+  padding: 5vmin;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  justify-content: center; /* Center children vertically */
 }
 
 .detail .gallery-image img {
